@@ -2341,7 +2341,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1606741233345877604}
   m_Layer: 0
-  m_Name: Pos2_back
+  m_Name: Pos1_back
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -2360,7 +2360,7 @@ Transform:
   m_Children:
   - {fileID: 1335021490677823546}
   m_Father: {fileID: 1262981341574318928}
-  m_RootOrder: 4
+  m_RootOrder: 3
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &980606797057314857
 GameObject:
@@ -4114,7 +4114,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981341062013569}
   m_Layer: 0
-  m_Name: Pos4
+  m_Name: Pos6
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -4133,7 +4133,7 @@ Transform:
   m_Children:
   - {fileID: 1262981342856413042}
   m_Father: {fileID: 1262981341748537622}
-  m_RootOrder: 3
+  m_RootOrder: 5
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981341097819455
 GameObject:
@@ -4474,7 +4474,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981341177649177}
   m_Layer: 0
-  m_Name: Pos6
+  m_Name: Pos4
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -4493,7 +4493,7 @@ Transform:
   m_Children:
   - {fileID: 1262981341741323655}
   m_Father: {fileID: 1262981341748537622}
-  m_RootOrder: 5
+  m_RootOrder: 3
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981341205095167
 GameObject:
@@ -5352,7 +5352,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981341332553762}
   m_Layer: 0
-  m_Name: Pos2
+  m_Name: Pos5
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -5371,7 +5371,7 @@ Transform:
   m_Children:
   - {fileID: 1262981342296268140}
   m_Father: {fileID: 1262981341748537622}
-  m_RootOrder: 1
+  m_RootOrder: 4
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981341337600737
 GameObject:
@@ -5701,7 +5701,7 @@ Transform:
   m_PrefabInstance: {fileID: 0}
   m_PrefabAsset: {fileID: 0}
   m_GameObject: {fileID: 1262981341438905655}
-  m_LocalRotation: {x: 0, y: 0, z: 0, w: 1}
+  m_LocalRotation: {x: -0, y: -0, z: -0, w: 1}
   m_LocalPosition: {x: -4.5, y: 1.5, z: 0}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children:
@@ -6431,11 +6431,11 @@ Transform:
   m_LocalPosition: {x: 2, y: -1.75, z: 10}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children:
-  - {fileID: 1262981341979996746}
   - {fileID: 1262981342439160336}
+  - {fileID: 1262981341979996746}
   - {fileID: 1262981342809768911}
-  - {fileID: 3231679964455189309}
   - {fileID: 1606741233345877604}
+  - {fileID: 3231679964455189309}
   - {fileID: 6024421957263002597}
   m_Father: {fileID: 1262981341573327517}
   m_RootOrder: 2
@@ -6947,19 +6947,19 @@ MonoBehaviour:
   battleActive: 0
   battleScene: {fileID: 1262981341573327518}
   playerPositions:
-  - {fileID: 1262981341979996746}
   - {fileID: 1262981342439160336}
+  - {fileID: 1262981341979996746}
   - {fileID: 1262981342809768911}
-  - {fileID: 3231679964455189309}
   - {fileID: 1606741233345877604}
+  - {fileID: 3231679964455189309}
   - {fileID: 6024421957263002597}
   enemyPositions:
-  - {fileID: 1262981342220465800}
-  - {fileID: 1262981341332553762}
-  - {fileID: 1262981341438905654}
-  - {fileID: 1262981341062013569}
   - {fileID: 1262981342222691769}
+  - {fileID: 1262981342220465800}
+  - {fileID: 1262981341438905654}
   - {fileID: 1262981341177649177}
+  - {fileID: 1262981341332553762}
+  - {fileID: 1262981341062013569}
   playerPrefabs:
   - {fileID: 666014723394310107, guid: 6fe0eda2727f0494a941894b355c41f3, type: 3}
   - {fileID: 3458277018618890565, guid: aef95b800a525d74e93a8e1b1a715bd4, type: 3}
@@ -7332,12 +7332,12 @@ Transform:
   m_LocalPosition: {x: 1.5, y: -2, z: 10}
   m_LocalScale: {x: 1, y: 1, z: 1}
   m_Children:
-  - {fileID: 1262981342220465800}
-  - {fileID: 1262981341332553762}
-  - {fileID: 1262981341438905654}
-  - {fileID: 1262981341062013569}
   - {fileID: 1262981342222691769}
+  - {fileID: 1262981342220465800}
+  - {fileID: 1262981341438905654}
   - {fileID: 1262981341177649177}
+  - {fileID: 1262981341332553762}
+  - {fileID: 1262981341062013569}
   m_Father: {fileID: 1262981341573327517}
   m_RootOrder: 3
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
@@ -7528,7 +7528,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981341979996746}
   m_Layer: 0
-  m_Name: Pos1_front
+  m_Name: Pos2_front
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -7547,7 +7547,7 @@ Transform:
   m_Children:
   - {fileID: 1262981341291393962}
   m_Father: {fileID: 1262981341574318928}
-  m_RootOrder: 0
+  m_RootOrder: 1
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981341994865246
 GameObject:
@@ -8092,7 +8092,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981342220465800}
   m_Layer: 0
-  m_Name: Pos1
+  m_Name: Pos2
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -8111,7 +8111,7 @@ Transform:
   m_Children:
   - {fileID: 1262981340937779449}
   m_Father: {fileID: 1262981341748537622}
-  m_RootOrder: 0
+  m_RootOrder: 1
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981342222691770
 GameObject:
@@ -8123,7 +8123,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981342222691769}
   m_Layer: 0
-  m_Name: Pos5
+  m_Name: Pos1
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -8142,7 +8142,7 @@ Transform:
   m_Children:
   - {fileID: 1262981341232790890}
   m_Father: {fileID: 1262981341748537622}
-  m_RootOrder: 4
+  m_RootOrder: 0
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981342225065111
 GameObject:
@@ -8841,7 +8841,7 @@ GameObject:
   m_Component:
   - component: {fileID: 1262981342439160336}
   m_Layer: 0
-  m_Name: Pos2_front
+  m_Name: Pos1_front
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -8860,7 +8860,7 @@ Transform:
   m_Children:
   - {fileID: 1262981342589156875}
   m_Father: {fileID: 1262981341574318928}
-  m_RootOrder: 1
+  m_RootOrder: 0
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &1262981342532677448
 GameObject:
@@ -13495,7 +13495,7 @@ GameObject:
   m_Component:
   - component: {fileID: 3231679964455189309}
   m_Layer: 0
-  m_Name: Pos1_back
+  m_Name: Pos2_back
   m_TagString: Untagged
   m_Icon: {fileID: 0}
   m_NavMeshLayer: 0
@@ -13514,7 +13514,7 @@ Transform:
   m_Children:
   - {fileID: 2962676984899014088}
   m_Father: {fileID: 1262981341574318928}
-  m_RootOrder: 3
+  m_RootOrder: 4
   m_LocalEulerAnglesHint: {x: 0, y: 0, z: 0}
 --- !u!1 &3134026028821672420
 GameObject:
