@@ -10,6 +10,7 @@ public class BattleType
 {
     // creates various variables to handle elements of battle configuration
     public string[] enemies;
+    public int[] enemyPlacement;
     public int rewardXP;
     public int rewardAP;
     public string[] rewardItems;
